--- a/src/tests/makefile
+++ b/src/tests/makefile
@@ -5,9 +5,10 @@ CFLAGS = -Wall -Wextra -pedantic -I/usr/include/mysql -I/usr/include/mysql/mysql
 SRC_DIR = ../
 INCL_DIR = ../include
 
-test: sort_test.o db_utils.o test.o data_types.o
+test: sort_test.o types_test.o db_utils.o test.o data_types.o
 	$(PREFIX) $(CFLAGS) -o test test.o data_types.o db_utils.o
 	$(PREFIX) $(CFLAGS) -o sort_test sort_test.o data_types.o db_utils.o
+	$(PREFIX) $(CFLAGS) -o types_test types_test.o data_types.o db_utils.o
 	rm *.o
 
 test.o: test.c $(INCL_DIR)/db_utils.h
@@ -15,6 +16,9 @@ test.o: test.c $(INCL_DIR)/db_utils.h
 
 sort_test.o: sort_test.c
 	$(PREFIX) $(CFLAGS) -c sort_test.c
+
+types_test.o: types_test.c
+	$(PREFIX) $(CFLAGS) -c types_test.c
 
 data_types.o: $(SRC_DIR)/data_types.c $(INCL_DIR)/data_types.h
 	$(PREFIX) $(CFLAGS) -c $(SRC_DIR)/data_types.c
