Changes to the UI + fixes for the tests

--- a/src/tests/makefile
+++ b/src/tests/makefile
@@ -5,14 +5,14 @@ CFLAGS = -Wall -Wextra -pedantic -I/usr/include/mysql -I/usr/include/mysql/mysql
 SRC_DIR = ../
 INCL_DIR = ../include
 
-test: sort_test.o types_test.o db_utils.o test.o data_types.o
-	$(PREFIX) $(CFLAGS) -o test test.o data_types.o db_utils.o
+test: db_test.o sort_test.o types_test.o db_utils.o data_types.o
+	$(PREFIX) $(CFLAGS) -o db_test db_test.o data_types.o db_utils.o
 	$(PREFIX) $(CFLAGS) -o sort_test sort_test.o data_types.o db_utils.o
 	$(PREFIX) $(CFLAGS) -o types_test types_test.o data_types.o db_utils.o
 	rm *.o
 
-test.o: test.c $(INCL_DIR)/db_utils.h
-	$(PREFIX) $(CFLAGS) -c test.c
+db_test.o: db_test.c $(INCL_DIR)/db_utils.h
+	$(PREFIX) $(CFLAGS) -c db_test.c
 
 sort_test.o: sort_test.c
 	$(PREFIX) $(CFLAGS) -c sort_test.c
